--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,6 +4,19 @@
     font-family: 'work sans', sans-serif;
 }
 
+/* shared styles */
+.btn-primary {
+    border-radius: 8px;
+    background: rgb(255, 144, 14);
+    padding: 20px 25px;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+}
+
+/* header styles */
 header {
     background: rgba(255, 144, 14, 0.1);
     padding: 50px 240px;
@@ -12,6 +25,7 @@ header {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-tittle {
@@ -24,7 +38,7 @@ nav {
 nav ul {
     display: flex;
     list-style: none;
-    align-items: center;
+
 }
 
 nav li {
@@ -56,4 +70,33 @@ nav a {
 .banner-description {
     color: rgb(114, 114, 114);
     font-weight: 400;
+    font-size: 1rem;
+}
+
+.banner img {
+    width: 100%;
+    margin-top: 20px;
+}
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+    nav {
+        flex-direction: column;
+    }
+
+    header {
+        padding: 30px;
+    }
 }
