--- a/styles/architect.css
+++ b/styles/architect.css
@@ -100,3 +100,52 @@ nav a {
         padding: 30px;
     }
 }
+
+/* main section */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.team-container {
+
+    display: flex;
+    align-items: center;
+    margin-top: 85px;
+    margin-bottom: 130px;
+
+}
+
+
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.team-content {
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.team-tittle {
+    color: rgb(19, 19, 19);
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.quick-list {
+    color: rgb(114, 114, 114);
+    font-weight: 500;
+}
+
+.team-feature {
+    color: rgb(255, 144, 14);
+}
+
+.team-description {
+    color: rgb(114, 114, 114);
+    font-size: 1rem;
+    font-weight: 400;
+}
