--- a/styles/architect.css
+++ b/styles/architect.css
@@ -16,6 +16,18 @@
     border: 0;
 }
 
+.section-tittle {
+    color: rgb(19, 19, 19);
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.description {
+    color: rgb(114, 114, 114);
+    font-weight: 400;
+    font-size: 1rem;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.1);
@@ -28,10 +40,7 @@ nav {
     align-items: center;
 }
 
-.nav-tittle {
-    font-size: 2.8rem;
-    font-weight: 700;
-}
+
 
 
 
@@ -67,11 +76,7 @@ nav a {
 
 }
 
-.banner-description {
-    color: rgb(114, 114, 114);
-    font-weight: 400;
-    font-size: 1rem;
-}
+
 
 .banner img {
     width: 100%;
@@ -128,6 +133,47 @@ main {
     font-weight: 400;
 }
 
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.facts-card-container .card {
+    border: 1px solid rgb(255, 144, 14);
+    border-radius: 8px;
+    text-align: center;
+    padding: 30px;
+
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: rgb(42, 42, 42);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card-container .card-tittle {
+    color: rgb(114, 114, 114);
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 60px;
+}
+
+.sponsors-img-container img {
+    width: 160px;
+}
+
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width:576px) {
@@ -136,14 +182,33 @@ main {
     }
 
     nav,
-    .team-container {
+    .team-container,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
+
 
     .team-img-container {
         grid-template-columns: 1fr;
     }
+
+    .facts-card-container {
+        padding-right: 20px;
+        padding-left: 20px;
+        gap: 20px;
+    }
+
+    .sponsors-img-container {
+        padding-left: 20px;
+        padding-right: 20px;
+        align-items: center;
+        gap: 20px;
+    }
 }
+
+
+
 
 /* tablet or medium devices */
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -155,5 +220,13 @@ main {
 
     header {
         padding: 30px;
+    }
+
+    .sponsors-img-container {
+        flex-direction: column;
+        padding-left: 20px;
+        padding-right: 20px;
+        align-items: center;
+        gap: 20px;
     }
 }
