--- a/styles/architect.css
+++ b/styles/architect.css
@@ -133,6 +133,58 @@ main {
     font-weight: 400;
 }
 
+.features {
+    display: flex;
+    gap: 130px;
+}
+
+.features .section-tittle {
+    border-left: 5px solid rgb(255, 144, 14);
+    padding-left: 24px;
+}
+
+.features-content .card {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+    margin-bottom: 20px;
+}
+
+.features-content .card-description {
+    color: rgb(144, 144, 144);
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.features-content .card-tittle {
+    color: rgb(19, 19, 19);
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: rgb(255, 144, 14);
+    width: 342px;
+    padding: 40px;
+    height: 200px;
+}
+
+
+.ten-years-badge h3 {
+    color: rgb(255, 255, 255);
+    font-size: 4rem;
+    font-weight: 700;
+
+}
+
+.ten-years-badge p {
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
 .facts-card-container {
     display: flex;
     justify-content: space-around;
@@ -173,6 +225,9 @@ main {
 .sponsors-img-container img {
     width: 160px;
 }
+
+
+
 
 /* responsive media queries */
 /* mobile devices */
